# Youtube-download-helper

./: .gitignore  .timestamps.json  37SpumiGHgE-ref.txt  README.md  ___Cheat-Sheet.txt  ___install.txt  ___start.txt  __mypy-result.txt  __mypy.py  __package_tree-nodev.txt  __package_tree.txt  __package_tree_all.txt  __package_tree_dev.txt  __tree.txt  _basedpyright.py  _mypy.py  _pyright.py  analyse.py  info.txt  main.py  out.txt  pyproject.toml  requirements.in  requirements.txt  ruff.toml  test_analyse.py
.type-check-result/: mypy-src.txt  pyright-src.txt
_json/: Maximilian Fichtner： Energiespeicher der Zukunft.json  Tail Recursion – What is it？ And why should you care？.json  Wie werden wir in 100 Jahren leben？ ｜ Universität Konstanz.json
_logs/: HaKn5hddIQo.txt
_prefs/: pref.yaml
settings/: settings.yaml
src/: analyse.py  main.py  youtube.py
src/helper/: analyse.py  argsparse.py  youtube.py
src/utils/: decorator.py  file.py  prefs.py  trace.py
test/data/: 3D-Karte von Dunkler Materie & Einstein-Ringe • Euclid ｜ Andreas Müller.json  Die Liga der Rotschöpfe – Sherlock Holmes löst ein raffiniertes Rätsel ｜ Hörbuch von Benjamin Werner.json  Die Saturnringe verschwinden – aber warum gibt es sie überhaupt？ ｜ Harald Lesch ｜ Terra X Lesch & Co.json  Edgar Wallace - Folge 1： Der Hexer (Der Krimi-Klassiker in neuer Hörspielfassung).json  Exodus (Folge 1 von 2) - Der Aufbruch ／／ Dolby Digital 5.1.json  Expansion des Universums？ • Vater des Urknalls： Georges Lemaître ｜ Hans-Joachim Blome.json  Fremde Welten finden • Aktueller Stand der Methoden zur Exoplanetensuche ｜ Eva-Maria Ahrer.json  Heinz Haber - Was sucht der Mensch Im Weltraum (2／13) - Topographie des Raumflugs.json  Heinz Haber - Was sucht der Mensch im Weltraum (3／13) - Die Natur führt Regie.json  Herbert Dreiner： 'Ist der Mond wirklich da, wenn niemand schaut？'.json  Kunde kann das nicht mehr ertragen! AMG Mercedes mit Geräuschen aus dem Motor.json  New Nuclear Waste Battery Can Run For 5000 Years.json  RETRO： ZeroTrooper-F.json  Radioteleskope： Was RAUSCHT da im WELTALL？ ｜ Astrophysik & Kosmologie #10.json  Relativitätstheorie für Laien ｜ Universität Konstanz.json  Sunyaev-Zeldovich & Sachs-Wolfe Effekt • Eigenheiten des Lichts • Fred Young Teleskop ｜ Josef Gaßner.json  Unsichtbares im Universum sichtbar machen.• Astrotomographie ｜ Axel Schwope.json
yt-dlp-patch/: Kernfusion： Risiken, Atommüll, Endlager • SuperGAU • Radioaktivität • vAzS (109)  ｜ Josef M. Gaßner - v1.json  Kernfusion： Risiken, Atommüll, Endlager • SuperGAU • Radioaktivität • vAzS (109)  ｜ Josef M. Gaßner - v2.json  patches.txt
