[project]
name = "youtube-download-helper"
version = "0.1.4"
description = "..."
authors = [
    { name = "Jürgen Schoenemeyer", email = "js007@web.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "click>=8.1.8",
    "pyyaml>=6.0.2",
    "yt-dlp>=2025.3.26",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "types-pyyaml>=6.0.12.20250402",
]

[tool.basedpyright]
deprecateTypingAliases =  false
enableTypeIgnoreComments = true
reportAny = false
reportExplicitAny = false
reportImplicitRelativeImport = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnnecessaryTypeIgnoreComment = false
reportUnusedCallResult = false

