[project]
name = "youtube-download-helper"
version = "0.1.6"
description = "..."
authors = [
    { name = "Jürgen Schoenemeyer", email = "js007@web.de" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "click>=8.3.1",
    "pyyaml>=6.0.3",
    "yt-dlp>=2025.12.8",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pyrefly>=0.46.1",
    "types-pyyaml>=6.0.12.20250915",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.basedpyright]
deprecateTypingAliases =  false
enableTypeIgnoreComments = true
reportAny = false
reportExplicitAny = false
reportImplicitRelativeImport = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnnecessaryTypeIgnoreComment = false
reportUnusedCallResult = false

[project.scripts]
youtube = "src.main:main"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
